use authing user client to current user
